--- a/style/g3.css
+++ b/style/g3.css
@@ -34,6 +34,15 @@
     border-radius: 8px;
     border: none;
 }
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main > section{
+    margin-top: 130px;
+}
+
 /* navbar related styles */
 .navber{
     justify-content: space-between;
@@ -74,9 +83,30 @@
     width: 100%;
 }
 
+
+/* team and feature styles */
+.teams{
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+}
+.feature-title{
+    font-size:2.8rem ;
+    font-weight: 700;
+}
+#Quick-list{
+    font-weight: 500;
+}
 /* responsive media query */
 @media screen and (max-width: 576px) {
     .navber, .nav-links{
      flex-direction: column;   
     }
+}
+.our-features{
+  margin-left: 130px;
+  max-width: 5;
 }
