--- a/style/g3.css
+++ b/style/g3.css
@@ -11,6 +11,9 @@
 .display-flex{
     display: flex;
 }
+.text-primary{
+    color:rgb(255, 144, 14) ;
+}
 /* dark02*/
 .text-gray{
     color:rgb(66, 66, 66) ;
@@ -34,6 +37,7 @@
     border-radius: 8px;
     border: none;
 }
+
 
 main{
     max-width: 1440px;
@@ -82,8 +86,38 @@ main > section{
 .banner-img{
     width: 100%;
 }
+/* some facts related */
+.facts-container{
+    display: grid;
+    grid-template-columns:repeat(4,1fr) ;
+    
+    
+}
+.fact-card{
+    border: 1px solid rgb(255, 144, 14);
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 
 
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+.fact-description{
+    max-width: 540px;
+}
 /* team and feature styles */
 .teams{
     align-items: center;
@@ -93,20 +127,65 @@ main > section{
     grid-template-columns: repeat(2,1fr);
     gap: 24px;
 }
-.feature-title{
+.section-title{
     font-size:2.8rem ;
     font-weight: 700;
 }
 #Quick-list{
     font-weight: 500;
 }
+/* sopnsor relative styles */
+.sopnsors-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sopnsor-company{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+}
+.sopnsor-company img{
+    filter:grayscale(100%);
+}
 /* responsive media query */
 @media screen and (max-width: 576px) {
-    .navber, .nav-links{
+    .navber, .nav-links, .teams{
      flex-direction: column;   
     }
+.team-img-container , .facts-container ,.sopnsor-company{
+    grid-template-columns: repeat(1,1fr);
+
+}
+.facts-container {
+    justify-items: center;
+    gap: 24px;
+}
+.sopnsor-company{
+    justify-items: center;
+    gap: 50px;
+}
+.our-features{
+    margin-left: 20px;
+}
+
 }
 .our-features{
   margin-left: 130px;
   max-width: 5;
+}
+
+
+/* medium size devise */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin:50px auto ;
+    }
+.sopnsor-company , .facts-container{
+    grid-template-columns: repeat(2,1fr);
+    gap: 50px;
+    justify-items: center;
+}
 }
